--- a/src/global.less
+++ b/src/global.less
@@ -101,3 +101,7 @@ ol {
     padding-left: 8px !important;
   }
 }
+
+button.ant-btn, .ant-select-selection, .ant-calendar-picker-input, .ant-input {
+  border-radius: 5px;
+}
